# OpenCvProject

./: .editorconfig  CMakeLists.txt  CMakeUserPresets.json  qt.cmake
Application/: CMakeLists.txt
Application/EyeTrackingApp/: CMakeLists.txt
Application/EyeTrackingApp/include/: EyeWorker.h
Application/EyeTrackingApp/src/: EyeWorker.cpp
Application/include/: AppManager.h
Application/src/: AppManager.cpp  main.cpp
Business/: CMakeLists.txt
Business/CameraCore/: CMakeLists.txt
Business/CameraCore/include/: ICamera.h
Business/CameraCore/src/: ICamera.cpp
Business/TargetRecognition/: CMakeLists.txt
Business/TargetRecognition/include/: EyeDataTypes.h  IEyeProcessor.h  TargetRecognition.h
Business/TargetRecognition/src/: TargetRecognition.cpp
Business/VideoProcess/: CMakeLists.txt
Common/: CMakeLists.txt
Common/CommonVision/: CMakeLists.txt
Common/Logger/: CMakeLists.txt
Common/Logger/include/: CommonLogger.h
Common/Logger/src/: CommonLogger.cpp
Doc/: CMake配置流程.md
Infrastructure/: CMakeLists.txt
Infrastructure/DbClient/: CMakeLists.txt
Infrastructure/HikCamera/: CMakeLists.txt
Infrastructure/HikCamera/include/: HikCamera.h
Infrastructure/HikCamera/src/: HikCamera.cpp
Infrastructure/Logger/: CMakeLists.txt
Infrastructure/OpenCvVision/: CMakeLists.txt
Infrastructure/OpenCvVision/include/: OpenCvEyeDetector.h
Infrastructure/OpenCvVision/src/: OpenCvEyeDetector.cpp
Service/: CMakeLists.txt
Service/CameraService/: CMakeLists.txt
Service/CameraService/include/: CameraService.h
Service/CameraService/src/: CameraService.cpp
Service/ImageFilterService/: CMakeLists.txt
Service/ImageFilterService/include/: ImageFilterService.h
Service/ImageFilterService/src/: ImageFilterService.cpp
Service/VideoFilterService/: CMakeLists.txt
Tests/: CMakeLists.txt  TestsService.cpp
UI/: CMakeLists.txt
UI/CameraView/include/: CameraView.h
UI/CameraView/src/: CameraView.cpp
UI/CameraView/ui/: CameraView.ui
UI/ImageProcessView/src/: ImageShowView.cpp
UI/ImageProcessView/ui/: VideoTrackWidgetView.ui
UI/ImageTrackView/include/: ImageShowView.h
UI/ImageTrackView/ui/: ImageShowView.ui
UI/MainWindow/include/: FrontPageView.h  MainWindow.h
UI/MainWindow/src/: FrontPageView.cpp  MainWindow.cpp  main.cpp
UI/MainWindow/ui/: FrontPageView.ui  MainWindow.ui
UI/Resource/: Resource.qrc
UI/TestDemoView/include/: OpenCvDemoView.h
UI/TestDemoView/src/: OpenCvDemoView.cpp
UI/TestDemoView/ui/: OpenCvDemoView.ui
UI/UpgradeView/include/: FirmWareUpgradeView.h  SoftWareUpgrade.h
UI/UpgradeView/src/: FirmWareUpgradeView.cpp  SoftWareUpgrade.cpp
UI/UpgradeView/ui/: FirmWareUpgradeView.ui  SoftWareUpgrade.ui
UI/VideoTrackWidgetView/include/: VideoTrackWidgetView.h
UI/VideoTrackWidgetView/src/: VideoTrackWidgetView.cpp
UI/include/: ImageShowView.h  MainWindow.h
UI/src/: ImageShowView.cpp  MainWindow.cpp  main.cpp
UI/ui/: ImageShowView.ui  MainWindow.ui
